--- a/app/src/main/res/layout/fragment_anotacoes_.xml
+++ b/app/src/main/res/layout/fragment_anotacoes_.xml
@@ -54,16 +54,18 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="80dp"
+        android:layout_height="1100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-445dp"
         android:scrollbars="none">
-    <LinearLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
