--- a/app/src/main/res/layout/fragment_artigos.xml
+++ b/app/src/main/res/layout/fragment_artigos.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/mintCream"    tools:context=".ArtigosFragment">    <!-- TODO: Update blank fragment layout -->
 
-    <ImageView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_marginStart="-5dp"        android:layout_marginTop="-600dp"        android:rotation="90"        android:src="@drawable/plmds" />    <ImageView        android:layout_width="50dp"        android:layout_height="50dp"        android:src="@drawable/iconlogo"        android:layout_marginTop="30dp"        android:layout_marginStart="300dp"        />    <TextView        android:layout_width="match_parent"        android:layout_height="35dp"        android:layout_marginStart="10dp"        android:layout_marginTop="100dp"        android:text="Artigos e Relatos"        android:fontFamily="@font/montserrat"        android:textSize="20dp"        />
+    <ImageView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_marginStart="-5dp"        android:layout_marginTop="-600dp"        android:rotation="90"        android:src="@drawable/plmds" />    <ImageView        android:layout_width="50dp"        android:layout_height="50dp"        android:src="@drawable/iconlogo"        android:layout_marginTop="30dp"        android:layout_marginStart="300dp"        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="150dp"
+        android:fontFamily="@font/montserrat"
+        android:text="Artigos e Relatos"
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,54 +18,8 @@
 
         <HorizontalScrollView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btTodos"
-                    android:layout_width="60dp"
-                    android:layout_height="20dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:layout_marginStart="90dp"
-                    android:layout_marginTop="150dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/white"
-                    android:fontFamily="@font/montserrat"
-                    android:text="Todos"
-                    android:textColor="@color/black"
-                    android:textSize="10sp" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btHRelatos"
-                    android:layout_width="60dp"
-                    android:layout_height="20dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:layout_marginTop="150dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/white"
-                    android:fontFamily="@font/montserrat"
-                    android:text="Relatos"
-                    android:textColor="@color/black"
-                    android:textSize="10sp" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btHDicas"
-                    android:layout_width="60dp"
-                    android:layout_height="20dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:layout_marginTop="150dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/white"
-                    android:fontFamily="@font/montserrat"
-                    android:text="Dicas"
-                    android:textColor="@color/black"
-                    android:textSize="10sp" />
-            </LinearLayout>
-        </HorizontalScrollView>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200dp" />
 
         <ScrollView
             android:layout_width="match_parent"
