--- a/app/src/main/res/layout/fragment_paciente.xml
+++ b/app/src/main/res/layout/fragment_paciente.xml
@@ -197,11 +197,12 @@
     <ImageView
         android:layout_width="1012dp"
         android:layout_height="829dp"
-        android:layout_marginTop="304dp"
+        android:layout_marginStart="-250dp"
+        android:layout_marginTop="370dp"
         android:rotation="-90"
         android:src="@drawable/plmds"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-321dp" />
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
